<resources>
    <string name="app_name">Wearwhere</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todosign">TODO</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todoforgot">TODO</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home_maps">Map</string>
    <string name="todohome">TODO</string>


    <string-array name="menu_list">
        <item>Home</item>
        <item>My Profile</item>
        <item>Tracking</item>
        <item>Settings</item>
        <item>Logout</item>

    </string-array>

    <string-array name="menu_images">
        <item>@drawable/home_icon</item>
        <item>@drawable/myprofileicon</item>
        <item>@drawable/tracking_icon</item>
        <item>@drawable/setting_icon</item>
        <item>@drawable/logout_icon</item>


    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Alert Target</item>
        <item>Alert Frequency</item>
        <item>Disbale Geofence</item>
        <item>Exit</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->

    <array name="nav_drawer_icons">
        <item>@drawable/target</item>
        <item>@drawable/timer</item>
        <item>@drawable/disbale</item>
        <item>@drawable/exit</item>
    </array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo3">TODO</string>
    <string name="new_here_sign_up">New here? Sign UP</string>
    <string name="forgot_password1">Forgot password?</string>
    <string name="todo1">TODO</string>
    <string name="or">or</string>
    <string name="todo2">TODO</string>
    <string name="login2">LOGIN</string>
    <string name="password">Password</string>
    <string name="login1">LOGIN</string>
    <string name="e_mail_address">E-mail address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tracking">Tracking</string>
</resources>
